Fixed spacing in header and about section

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ header {
 
 .header-menu li {
     display: inline-block;
+    margin: 0 1rem;
+    font-weight: 500;
 }
 
 .header-menu li a {
@@ -122,13 +124,6 @@ header {
 .ms_container .about-text {
     text-align: initial;
 }
-
-/* #download-button a {
-    padding: .5rem 1rem;
-    border: 1px solid white;
-    border-radius: 5px;
-    color: inherit;
-} */
 
 #download-button {
     color: inherit;
